selling data chart

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   python:
-    image: python:3.9.17-slim
-    command: /bin/bash -c "echo 'Go'"
+    build: .
     volumes:
       - ./exercises:/app
+    stdin_open: true
+    tty: true
